--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "core-js": "^3.8.3",
     "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
-    "vue-slick-carousel": "^1.0.6",
-    "vue3-carousel": "^0.3.3"
+    "vue3-carousel": "^0.3.3",
+    "vee-validate": "^4.6.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
